# archeaeology_prototype

./: .env  .gitignore  README.md  landing.html  pyproject.toml  requirements.txt  run.sh  vibelog.txt
backend/archaeologist/: __init__.py  cli.py  pipeline.py  server.py  web_ui.py
frontend/: package.json
frontend/src/: App.jsx  api.js
